
Graph Plugin:
 - Allowed constraints to be created using drag and drop.
   To create such a non DB constraint using drag and drop hold
   down the control key. Then right click the constraint to configure it.  

 - Updated Korean translation available (Thanks to Youngwoo Kim)


Bug-Fixes:

SQL Scripts Plugin:
 - When generating insert scripts from a SQL statement the global
   preference "Qualify table names in generated scripts with the schema name" did not work.
   Thanks to Johann Geyer for the patch (Patch ID 2365193)

SQL Scripts Plugin:
 - Generating data scripts may throw java.lang.StringIndexOutOfBoundsException when timestamps where scripted


SP that returned a mix of update counts and results sets weren't displayed properly.

2801011: Sybase (CREATE TABLE script generate decimal(15,2) instead of (15,4))
2794860: Sybase (CREATE TABLE script generate numeric(15) instead (15,2))
2754166: SQLScript plugin loses precision for Timestamp in H2
2746982: Error occured in IPlugin.sessionEnded() for SQL Parametrisation
2713952: Create table script (on Sybase): Always generate "datetime" type for "date" (and datetime)
2657987: Session was closed even if session closing confirm dialog was not confirmed. Connection was not 
         closed then.

3.0.1 (3/23/2009)
================

Enhancements:

 - New Korean translation available (Thanks to Youngwoo Kim)

Bug-Fixes:

2686268: OS X Look and Feel is Incorrect
2645286: Quotes missing in squirrel-sql.sh (Thanks to mdykierek for the patch)
2531193: Oracle create table script the "ON UPDATE" is wrong
2644778: "Contents Tab SQL filter" and "Limit cell edit WHERE clause size" dialogs didn't work

Other reported bug-fixes:

 - Fixed UI freeze issue which sometimes occurred when using software update feature.

 - Better support for PointBase 5.7

 - Fixed bug which caused NullPointerException in Refactoring when modifying column types
 